2016-08-02  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_dijet.cc:
	* MC_LHQG_Zjet.cc:
	normalised the delta(phi) distributions

2016-06-21  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_dijet.cc:
	* MC_LHQG_Zjet.cc:
	bumped min jet pt to 80% of the Z pt (or the hardest jet pt)

2016-02-16  Gregory Soyez  <soyez@fastjet.fr>

	* compute-efficiencies.py:
	allowed blocks to start with BEGIN (on top of "# BEGIN")

	* produce-Qdependence-avg.py:
	* produce-Rdependence-avg.py:
	fixed bug in computations of averages

2015-10-30  Jesse Thaler  <jthaler@mit.edu>

	* AnalyticResum/QvGAnalytics.nb
	Adding NGL piece to calculation, corresponding yoda/pdf files updated

2015-10-30  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_Zjet.cc:
	* MC_LHQG_dijet.cc:
	used E-scheme for the initial clustering. Then re-clustered the
	jet with C/A and the WTA scheme to (i) compute the angularities
	and (ii) apply mMDT

	* produce-Qdependence-avg.py:         *** ADDED ***
	* produce-Rdependence-avg.py:         *** ADDED ***
	* post-process.sh:
	added a series of plots with the average of the quark and gluon
	distributions (for the three IRC-safe angulairties)

	* MC_LHQG_dijet.cc:
	restricted the acceptance for particles to -2.5 .. 2.5
	imposed a max rapidity difference of 1 between the 2 jets
	histogrammed the depta phi between the 2 jets as a cross-check

	* README.md:
	fixed the command-line to build the Rivet plugin + added a note
	abbout the link to fastjet-contrib.

	* MC_LHQG_Zjet.cc:
	- added a max rapidity difference between the jet and the Z boson
	- fixed a few compilation bugs in the previous (untested) code

	* README.md:
	small tweaks to the workflow

	* MC_LHQG_Zjet.cc:
	Following the discussion with the group:
	- set the acceptance down to -2.5 .. 2.5
	- used dressed muons (R=0.1) [copied from ATLAS_2011_I928289_Z]
	- added a control plot for the Zjet delta phi distribution

2015-10-23  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_Zjet.cc:             *** ADDED ***